# GrammarZEN

./: .replit  README.md  pyproject.toml  replit.md
src/: custom_rules.py  grammar_engine.py  main.py  requirements.txt  text_analyzer.py
src/static/: api-docs.html  app.js  index.html  style.css
