[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "language-tool-python>=3.2.2",
    "nltk>=3.9.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "spacy>=3.8.11",
    "textblob>=0.19.0",
    "uvicorn>=0.41.0",
]
